@@ -9,6 +9,7 @@ t/00-load.t
 t/assert_all_keys_in.t
 t/assert_aoh.t
 t/assert_arrayref.t
+t/assert_arrayref_nonempty.t
 t/assert_coderef.t
 t/assert_datetime.t
 t/assert_defined.t
@@ -16,6 +17,7 @@ t/assert_empty.t
 t/assert_exists.t
 t/assert_fail.t
 t/assert_hashref.t
+t/assert_hashref_nonempty.t
 t/assert_in.t
 t/assert_integer.t
 t/assert_is.t
