@@ -1,5 +1,12 @@
 Revision history for Perl extension Carp::Assert::More.
 
+
+NEXT
+        [ENHANCEMENTS]
+        Add assert_arrayref_nonempty().
+
+        Add assert_hashref_nonempty().
+
 1.24    Tue Oct  6 22:37:06 CDT 2020
         [ENHANCEMENTS]
         The requirement for Perl 5.10 has been reverted to 5.6.1.
